listando resultado da pesquisa, formatando a exibição dos dados

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">MeliTest</string>
-    <string name="product_result_screen_button_back_label">Voltar</string>
+
+<!--    Product Result Screen-->
+    <string name="product_result_screen_button_back_label">Voltar para Pesquisa</string>
+    <string name="product_result_screen_product_not_found_text">Não encontramos o seu produto :(</string>
 </resources>
